objects/Add__c.object
<CustomObject>
    <description>Mails 8</description>
    <fields>
        <fullName>Missing_1__c</fullName>
        <label>Missing 1</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_2__c</fullName>
        <label>Missing 2</label>
        <length>13</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Missing_3__c</fullName>
        <label>Missing 3</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <label>Add</label>
    <nameField>
        <label>Add Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Add</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>